# sentra

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  DIAGNOSTICS.md  Dockerfile  LICENSE  METRICS.md  README.md  SECURITY.md  TESTING.md  docker-compose.presidio.real.yml  openapi.yaml  presidio.real.env
benches/: external_http.rs
examples/: README.md  agent_crescendo.rs  external_http_example.json  load_test.rs  policy_config_example.json  presidio_real.md  presidio_real_plugin_config.json
examples/presidio/: presidio_real.md  presidio_real_plugin_config.json
scripts/: run_real_presidio_e2e.sh
src/: config.rs  lib.rs  main.rs  util.rs
src/plugins/: domain_block.rs  email_bcc.rs  exfil.rs  external_http.rs  mod.rs  pii.rs  policy_pack.rs  secrets.rs
tests/: app_config.rs  audit_mode.rs  auth_helpers.rs  concurrency_stress.rs  external_http.rs  external_http_integration.rs  external_http_metrics.rs  external_http_metrics_sequential.rs  external_http_non_empty_integration.rs  external_http_non_empty_pointer.rs  external_http_telemetry.rs  guards.rs  metrics_endpoint.rs  plugin_timing.rs  request_body_limit.rs  rotation.rs  schema_roundtrip.rs  sentra_tests.rs  short_circuit.rs  strict_auth.rs  telemetry.rs  telemetry_audit_suppressed.rs  telemetry_sink.rs  telemetry_structured.rs  telemetry_writer.rs
tests/common/: mod.rs
