[package]
name = "sentra"
version = "0.5.0"
edition = "2021"

# Metadata for developers. Sentra provides a fast external security provider for
# Microsoft Copilot Studio. It implements a pluggable pipeline for runtime
# threat detection with a one‑second budget. See README.md for details.

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.4", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
aho-corasick = "1.0.3"
dashmap = "5.5.3"
ahash = "0.8.3"
regex = "1"
memchr = "2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
flate2 = { version = "1", features = ["miniz_oxide"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["default"] }
# enable tokio macros for tests
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
hyper = "1"
http-body-util = "0.1"
tokio-stream = "0.1"
bytes = "1"
http-body = "1"

[[bench]]
name = "external_http"
harness = false
